[gd_scene load_steps=5 format=3 uid="uid://helxro2d4e87"]

[ext_resource type="Script" path="res://bullets/grapple.gd" id="1_l5gm0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xomgb"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_cwqud"]
radius = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3h5en"]
radius = 80.399

[node name="Grapple" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
motion_mode = 1
script = ExtResource("1_l5gm0")

[node name="melee_hitbox" type="Area2D" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape2D2" type="CollisionShape2D" parent="melee_hitbox"]
shape = SubResource("RectangleShape2D_xomgb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cwqud")

[node name="player_dector" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 129
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_dector"]
shape = SubResource("CircleShape2D_3h5en")

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 52.0
mouse_filter = 2

[connection signal="body_entered" from="melee_hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="player_dector" to="." method="_on_player_dector_body_entered"]
